examples/test/testpolicy19521.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19521
  namespace: namespace91
spec:
  podSelector:
    matchLabels:
      key25: value23
      key18: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value19
          key8: value4
      podSelector:
        matchLabels:
          key5: value16
          key3: value16
